# Yokai-bot-v2

./: README.md  __init__.py  __main__.py  application.yml  constants.py  dicttest.py  lists.py  main.py  output.json  package-lock.json  pyproject.toml  requirements.txt  test.py  valorant_agents.py  webserver.py  yokai-bot.py
bot-commands/: fuck-marry-kill.py  fun.py  info.py  lfg.py  mod.py  music  music_plugin.py  quotes.py  test.py  tik-tak-toe.py  valorant.py
bot-commands/lfg_dir/: lfg.json
valorant/: test.json  valo_scrapper.ipynb
valorant/json_dir/: lfg.json
